tests/0008-assignment-undefined.src.err
tests/0008-assignment-undefined.src:1
ERROR: undefined variable 'unknown'
 | unknown = "what";
   ^
